[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "subscription-tracker"
version = "0.1.0"
description = "API-first MVP for subscription and recurring payment tracking."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Subscription Tracker Team" }]
dependencies = [
  "fastapi>=0.111.0",
  "pypdf>=5.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pyright>=1.1.380",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
